# etimeoffice_biometric

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install_etimeoffice_biometric.sh  pyproject.toml  setup.py
.claude/worktrees/confident-lumiere-7ce495/etimeoffice_biometric/: hooks.py
.claude/worktrees/confident-lumiere-7ce495/etimeoffice_biometric/utils/: sync.py
.claude/worktrees/elastic-allen-774106/: CHANGELOG.md  LICENSE  MANIFEST.in  pyproject.toml  setup.py
.claude/worktrees/elastic-allen-774106/docs/: privacy-policy.md
.claude/worktrees/elastic-allen-774106/etimeoffice_biometric/: api.py  patches.txt  tasks.py
.claude/worktrees/elastic-allen-774106/etimeoffice_biometric/etimeoffice_biometric/: __init__.py
.claude/worktrees/elastic-allen-774106/etimeoffice_biometric/utils/: __init__.py  sync.py
docs/: privacy-policy.md  terms-of-service.md
etimeoffice_biometric/: api.py  hooks.py  modules.txt  patches.txt  tasks.py
etimeoffice_biometric/etimeoffice_biometric/: __init__.py
etimeoffice_biometric/etimeoffice_biometric/doctype/: __init__.py
etimeoffice_biometric/etimeoffice_biometric/doctype/biometric_settings/: __init__.py  biometric_settings.js  biometric_settings.json  biometric_settings.py
etimeoffice_biometric/etimeoffice_biometric/doctype/biometric_sync_log/: __init__.py  biometric_sync_log.js  biometric_sync_log.json  biometric_sync_log.py
etimeoffice_biometric/etimeoffice_biometric/page/biometric_fetch/: biometric_fetch.html  biometric_fetch.js  biometric_fetch.json
etimeoffice_biometric/utils/: __init__.py  etimeoffice.py  sync.py
(+17 files in other folders)
