[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "etimeoffice_biometric"
authors = [
    { name = "Yash Chaurasia", email = "chaurasiayash351@gmail.com" }
]
description = "Biometric Attendance Integration with eTimeOffice API for ERPNext/HRMS"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "requests",
    "croniter",
]

[project.urls]
Homepage = "https://github.com/greninja87/etimeoffice_biometric"

[tool.flit.module]
name = "etimeoffice_biometric"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

[tool.bench.marketplace]
categories = ["HR", "Integrations"]
